cleaner links look

--- a/manifest.json
+++ b/manifest.json
@@ -19,6 +19,9 @@
 		"css": ["lib/modules/remove_ads.css",
 			"lib/modules/font.css",
 			"lib/modules/links.css"
+			],
+		"js": ["lib/jquery.min.js",
+			"lib/modules/sidePane.js"
 			]
 	}
 		]
